public interface ShuffleBehaviour {

    PlayingCard[] shuffleDeck();
    
}
